syntax = "proto3";

option csharp_namespace = "VideoUploadService";

service VideoUploadGrpc {
  rpc InitUpload (InitUploadRequest) returns (InitUploadResponse);
  rpc CompleteUpload (CompleteUploadRequest) returns (CompleteUploadResponse);
}

message InitUploadRequest {
    string userId = 1;
    string title = 2;
    string desciption = 3;
    string fileName = 4;
    string formatName = 5;
    float duration = 6;
    int64 size = 7;
    string artist = 8;
}

message InitUploadResponse {
  string videoId = 1;
  repeated string chunkUrls = 2; // Pre-signed URLs cho từng chunk
}

message CompleteUploadRequest {
  string userId = 1;
  string videoId = 2;
  repeated string chunkChecksums = 3; // SHA-256 của từng chunk
}

message CompleteUploadResponse {
  string videoId = 1;
  string status = 2; // "PROCESSING" | "FAILED"
}