syntax = "proto3";

option csharp_namespace = "VideoUploadService";

import "google/protobuf/timestamp.proto";
// import "video-metadata.proto";

service VideoUploadGrpc {
  rpc InitUpload (InitUploadRequest) returns (InitUploadResponse);
  rpc CompleteUpload (CompleteUploadRequest) returns (CompleteUploadResponse);
}

message InitUploadRequest {
    string userId = 1;
    string title = 2;
    string desciption = 3;
    string filename = 4;
    string format_name = 5;
    float duration = 6;
    int64 size = 7;
    string artist = 8;
}

message InitUploadResponse {
  string uploadId = 1;
  repeated string chunk_urls = 2; // Pre-signed URLs cho từng chunk
}

message CompleteUploadRequest {
  string uploadId = 1;
  repeated string chunkChecksums = 2; // SHA-256 của từng chunk
}

message CompleteUploadResponse {
  string videoId = 1;
  string status = 2; // "PROCESSING" | "FAILED"
}